table fix
Pivoted weekly claims table and paginated as it was too wide with too many weeks

--- a/application/styles/jobs-style.css
+++ b/application/styles/jobs-style.css
@@ -422,6 +422,7 @@ td {
     float: left;
     padding-bottom: 3px;
     margin-left: 20px;
+    width: 10%;
 }
 
 .dt-buttons .btn {
